src/content/templates/xMatter/project-specific/MXBLiteracy-XMatter/MXBCommon-XMatter.less
@import "../../bloom-xmatter-common.less";

@fontSize: 10pt;
@MarginBetweenMajorItems: 3em;
@contentMinimumHeight: 1em;

// trying to snug things up a bit around the license
.credits .licenseAndCopyrightBlock {
    margin-bottom: 0;
    .copyright,
    .licenseBlock {
        margin-bottom: 0;
    }
}

.titlePage {
    #titlePageTitleBlock {
        margin-bottom: @MarginBetweenMajorItems;
    }
    // shrink things down even more if it's a small paper size
    &.A6Landscape,
    &.A6Portrait,
    &.QuarterLetterLandscape,
    &.QuarterLetterPortrait {
        #titlePageTitleBlock {
            margin-bottom: 0;
            div {
                margin-bottom: 0;
            }
        }
    }
}

// more scrunching
.titlePage {
    // default values for the Languages of Book section; yeah, I know, huh? Credits-Page-style on the Title page!
    .Credits-Page-style .languagesOfBook {
        line-height: 1.1;
    }
    // default values for the Original Contributions section
    .OriginalContributions-style.bloom-contentNational1 {
        font-size: @fontSize;
        display: block;
        margin-bottom: @MarginBetweenMajorItems;
        margin-top: @MarginBetweenMajorItems;
    }
    // default values for the Funding section
    .Funding-style.bloom-contentNational1 {
        font-size: @fontSize;
        display: block;
    }
    // scrunch things down as much as possible
    .bloom-contentNational1,
    .bloom-content1 {
        margin-bottom: 0.5em;
    }
}

.credits {
    .marginBox {
        display: flex;
        flex-direction: column;
    }
    // default values for the National Language section
    .NationalLanguage-style.bloom-contentNational1 {
        font-size: @fontSize;
        line-height: 1.2;
        display: block;
        margin-bottom: @MarginBetweenMajorItems;
        // default paragraph spacing
        > p {
            margin-bottom: 0.75em;
        }
    }
    // default values for the Localized Acknowledgments section
    .LocalizedAcknowledgments-style.bloom-contentNational1 {
        font-size: @fontSize;
        line-height: 1.2;
        display: block;
        margin-bottom: @MarginBetweenMajorItems;
        // default paragraph spacing
        > p {
            margin-bottom: 1em;
        }
    }
    // default values for the Original Acknowledgments section
    .OriginalAcknowledgments-style.bloom-contentNational1 {
        font-size: @fontSize;
        line-height: 1.2;
        display: block;
        margin-top: 0;
    }
    // default values for license/copyright block and ISBN container
    .Credits-Page-style {
        font-size: @fontSize;
        line-height: 1.2;
    }
    .ISBNContainer {
        margin-bottom: 0.5em;
    }
    // default values for the Printing History section
    .PrintingHistory-style.bloom-contentNational1 {
        font-size: @fontSize;
        line-height: 1.2;
        display: block;
        text-align: center;
        margin-bottom: 0; // snug up to bottom of marginBox
    }
    // scrunch things down as much as possible
    .bloom-contentNational1,
    .bloom-content1 {
        margin-bottom: 0.5em;
    }
}

.HalfLetterPortrait {
    &.outsideFrontCover .marginBox,
    &.insideFrontCover .marginBox,
    &.titlePage .marginBox,
    &.credits .marginBox,
    &.insideBackCover .marginBox,
    &.outsideBackCover .marginBox {
        height: unset;
        bottom: 0.75in; // make bottom margin on all xmatter pages 3/4"
    }
    &.outsideFrontCover .marginBox,
    &.titlePage .marginBox {
        top: 1in;
    }
}

.HalfLetterPortrait.outsideFrontCover {
    .bloom-translationGroup.bookTitle .bloom-editable.bloom-contentNational1 {
        font-size: 16pt;
    }
    .creditsRow .Cover-Default-style {
        font-size: 14pt;
        text-align: center;
    }
}

#titlePageTitleBlock .bloom-content1 {
    font-size: 24pt;
    font-weight: bold;
}

.insideBackCover {
    .marginBox {
        // Set the default style for the new Printer's Statement
        // The text should be center aligned at the bottom of the available space.  (An earlier
        // version of this code used .bloom-editable:only-child and .bloom-editable:not(:only-child)
        // in a confusing and ineffective way that had the side-effect of displaying vernacular as
        // well as national language data here, and also didn't push the text to the bottom of the
        // available space.  See http://issues.bloomlibrary.org/youtrack/issue/BL-4614.)
        .Printer-Statement-style.bloom-editable.bloom-visibility-code-on {
            // display:flex is needed for justify-content:flex-end to apply
            display: flex; // has been reset to block by .bloom-editable.bloom-visibility-code-on
            flex-direction: column; // stack paragraphs in a column
            justify-content: flex-end; // push text to the bottom of the available space
            text-align: center;
            font-size: @fontSize;
            line-height: 1.2;
        }
        // Allow the two .bloom-translationGroup boxes contained in the .marginBox box to flex
        // vertically.  They start out sharing the page 50-50, but the summary (or I suppose the
        // printer statement) can take more space if needed.
        display: flex;
        flex-direction: column;
    }
}

// override .bloom-content1 min-height 3em from bloom-xmatter-common.less
body[bookcreationtype="original"] {
    .titlePage {
        #languageInformation {
            .bloom-content1 {
                min-height: @contentMinimumHeight;
            }
        }
        #contributions {
            .bloom-content1 {
                min-height: @contentMinimumHeight;
            }
        }
        #localizedAcknowledgments {
            .bloom-content1 {
                min-height: @contentMinimumHeight;
            }
        }
        #funding {
            .bloom-content1 {
                min-height: @contentMinimumHeight;
            }
        }
    }
}

// override .bloom-contentNational1 min-height 3em from bloom-xmatter-common.less
body[bookcreationtype="translation"] {
    .titlePage {
        #languageInformation {
            .bloom-content1 {
                min-height: @contentMinimumHeight;
            }
        }
        #contributions {
            .bloom-content1 {
                min-height: @contentMinimumHeight;
            }
        }
        #localizedAcknowledgments {
            .bloom-content1 {
                min-height: @contentMinimumHeight;
            }
        }
        #funding {
            .bloom-content1 {
                min-height: @contentMinimumHeight;
            }
        }
    }
}

.L1-Name-Cover-style {
    font-size: 14pt;
}

.L1-Name-TitlePage-style {
    font-size: 12pt;
    width: 100%;
    text-align: center;
}

#funding {
    margin-top: auto;
}

